--- a/IPAVowels/IPAVowels-Info.plist
+++ b/IPAVowels/IPAVowels-Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>IPA Vowels</string>
+	<string>${PRODUCT_NAME}</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIcons</key>
@@ -14,8 +14,8 @@
 		<dict>
 			<key>CFBundleIconFiles</key>
 			<array>
-				<string>icon-114.png</string>
 				<string>icon-57.png</string>
+				<string>icon-114.png</string>
 				<string>icon-72.png</string>
 				<string>icon-144.png</string>
 			</array>
